fix/bugfr-622 PTR: line error at the left borders of product grid table when horizontal scrolling at far right

--- a/src/containers/ProductTracker/ProductTrackerTable/index.scss
+++ b/src/containers/ProductTracker/ProductTrackerTable/index.scss
@@ -980,15 +980,37 @@ $link-color: #349af8;
   height: 10px !important;
 }
 
+.inner-product-info {
+  border-left: 1px solid rgba(34, 36, 38, 0.3) !important;
+  height: 100% !important;
+  padding: 12px 14px !important;
+  border-top-left-radius: 10px !important;
+  border-bottom-left-radius: 10px !important;
+  border-top: 1px solid rgba(34, 36, 38, 0.3) !important;
+  border-bottom: 1px solid rgba(34, 36, 38, 0.3) !important;
+}
+
 .pt-product-info {
   position: absolute !important;
   width: 29em !important;
   //height: 6em !important;
   left: 1em !important;
   background: #fff !important;
-  border-left: 1px solid #98aeca !important;
-  border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px !important;
+  border-bottom-left-radius: 0 !important;
+  border-top-left-radius: 0 !important;
+  display: flex;
+  padding: 0 !important;
+  align-items: center !important;
+  border-left: none !important;
+  border-top: none !important;
+  border-bottom: none !important;
+
+  .table-cell-container {
+    @extend .inner-product-info;
+
+    height: 100% !important;
+    width: 100% !important;
+  }
 }
 
 .pt-product-info:hover {
@@ -1122,12 +1144,6 @@ $link-color: #349af8;
 @media only screen and (min-width: 1921px) and (max-width: 2560px) {
   .remove-top-border {
     width: 99.4% !important;
-  }
-}
-
-.ptr-header-row {
-  .pt-product-info {
-    border-bottom-left-radius: 10px !important;
   }
 }
 
